--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="containerMenu">
         <div class="logo">
             <header>
-                Portifólio      
+                Portfólio      
             </header>
         </div>
         
